# CL-image-GL

./: CMakeLists.txt  OpenCLKernels.cl  RgbImage.cpp  RgbImage.h  main.cpp
cmake/: CMakeCache.txt  FindGLFW.cmake  FindOpenGL.cmake  Makefile  SC_OpenGL  cmake_install.cmake
